removed redundant dom initialization

--- a/App.config
+++ b/App.config
@@ -6,6 +6,6 @@
   <appSettings>
     <add key="threadCount" value="4"/>
     <add key="directory" value="xml"/>
-    <add key="xpath" value="//a:sort/@s_c"/>
+    <add key="xpath" value="//docID"/>
   </appSettings>
 </configuration>
